# test_ui

./: .gitignore  emak.ini  meson.build  ui.c
include/: dbus.h  keypad.h  view.h  view_history.h  view_main.h  view_manager.h
include/models/: mdl_doorbell.h  mdl_unit.h
include/views/: view_connecting.h  view_main.h
src/: app.c  app.cpp  app.h.in  dbus.c  keypad.c  resources.xml  view.c  view_history.c  view_main.c  view_manager.c
src/models/: mdl_doorbell.c  mdl_unit.c
src/ui/: connecting.glade  window.css  window.glade
src/views/: view_connecting.c  view_main.c
